Fix T37559: Crash dissolving vertices in some situations